doc: add doc for description edition
