# src/controller/parcoursController.ts
@@ -55,7 +55,16 @@ parcoursController.get('/', async (req, res) => {
 })
 
 parcoursController.post('/', async (req, res) => {
-  // #swagger.description = 'Get all parcours by keywords relevance'
+  /**
+ * #swagger.description = 'Get all parcours by keywords relevance'
+  *
+  * #swagger.parameters['keywords'] = {
+        in: 'body',
+        description: 'relevance keywords',
+        required: true,
+        schema: { $ref: '#/definitions/parcours' }
+  }
+  */
 
   if (req.body == null || req.body.keywords == null) {
     // #swagger.responses[400] = { description: 'body/keywords are null' }
@@ -70,7 +79,9 @@ parcoursController.post('/', async (req, res) => {
     res.sendStatus(StatusCodes.INTERNAL_SERVER_ERROR)
     return
   }
-  // #swagger.responses[200] = { description: 'Parcours successfully obtained' }
+  /* #swagger.responses[200] = { description: 'Parcours successfully obtained' }
+    schema: { $ref: '#/definitions/parcoursList' }
+  }*/
   res.send(parcours)
 })
 
@@ -111,7 +122,20 @@ parcoursController.post('/create', async (req, res) => {
 })
 
 parcoursController.put('/:id', async (req, res) => {
-
+  /**
+   * #swagger.description = 'Edit a description'
+   * #swagger.responses[200] = {
+     description: 'Description successfully edited',
+    }
+   * #swagger.responses[404] = { description: 'Could not find the parcours' }
+   * #swagger.responses[400] = { description: 'No description in the request body' }
+   *
+   * #swagger.parameters['description'] = {
+    in: 'body',
+    description: 'new description',
+    required: true,
+    }
+  */
   if (req.body == null || req.body.description == null) {
     res.sendStatus(StatusCodes.BAD_REQUEST)
     return
